fixed button on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -164,16 +164,16 @@ p {
   margin: 0 auto;
 }
 nav {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #5e6164;
-  width: 100%;
-  opacity: 0.7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between;
+  flex-wrap: no-wrap;
 }
 nav h1 {
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin: auto;
 }
 nav div {
   display: flex;
@@ -190,7 +190,6 @@ nav div a {
   font-size: 1.8rem;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 1%;
 }
 footer {
   color: #22283B;
@@ -204,7 +203,7 @@ footer {
 }
 .home .intro img {
   border-radius: 15px;
-  margin-top: 90px;
+  margin-top: 10px;
 }
 @media screen and (max-width: 500px) {
   .home .intro img {
@@ -252,7 +251,7 @@ footer {
   }
 }
 .home .visit-planets {
-  padding: 15px;
+  padding: 10px 15px;
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -263,7 +262,7 @@ footer {
 .home .walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
-  padding: 50px 60px;
+  padding: 30px 60px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -308,6 +307,12 @@ footer {
   vertical-align: middle;
   font-weight: bold;
   font-size: 1.8rem;
+}
+@media screen and (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 800px;
+    height: 70px;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
