--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,22 +1,16 @@
 // Navigation code here
 nav {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: @shuttle-gray;
-  width: 100%;
-  opacity: 0.7;
+  .flex(column, center, space-between, no-wrap);
   h1 {
-    .padding-vertical(1%);
+    .padding-vertical (2%);
+    margin: auto;
   }
-
   div {
     .flex(row, center, center, no-wrap);
     a {
       .link(@ebony-clay);
       font-size: 1.8rem;
       .padding-horizontal(2%);
-      padding-bottom: 1%;
     }
   }
 }
